更新依赖项，调整 TypeScript 配置以包含组件目录，修改 Vite 配置以支持新组件路径，删除不再需要的 Vite SVG 文件。

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -10,5 +10,5 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "bundler"
   },
-  "include": ["src/lib"]
+  "include": ["src/components"]
 }
