--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "tailwindcss": "^4.1.4"
+    "@iconify/react": "^5.2.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "tailwindcss": "^4.1.4",
+    "tslib": "^2.8.1",
+    "vite-plugin-dts": "^4.5.3"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
@@ -25,10 +29,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "@tailwindcss/vite": "^4.1.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
