更新 package.json，修改作者信息和项目相关链接为 FerretAngel 的 GitHub 账户。

--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "menu",
     "tailwindcss"
   ],
-  "author": "",
+  "author": "FerretAngel",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/swipe-menu-react"
+    "url": "https://github.com/FerretAngel/swipe-menu-react"
   },
-  "homepage": "https://github.com/yourusername/swipe-menu-react#readme",
+  "homepage": "https://github.com/FerretAngel/swipe-menu-react#readme",
   "bugs": {
-    "url": "https://github.com/yourusername/swipe-menu-react/issues"
+    "url": "https://github.com/FerretAngel/swipe-menu-react/issues"
   }
 }
