--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swipe-menu-react",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -16,13 +16,7 @@
     "preview": "vite preview",
     "prepublishOnly": "pnpm build"
   },
-  "dependencies": {
-    "@iconify/react": "^5.2.1",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "tailwindcss": "^4.1.4",
-    "tslib": "^2.8.1",
-    "vite-plugin-dts": "^4.5.3"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
@@ -41,7 +35,13 @@
     "react-dom": "^19.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "@iconify/react": "^5.2.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "tailwindcss": "^4.1.4",
+    "tslib": "^2.8.1",
+    "vite-plugin-dts": "^4.5.3",
+    "swipe-menu-react": "file:./"
   },
   "keywords": [
     "react",
